v1.10.2
- Updated to PVR API v1.9.5

v1.10.1
- Updated to PVR API v1.9.4
- Updated to GUI API v5.8.0

v1.9.27
- Updated language files from Transifex

v1.9.26
- Updated language files from Transifex
- Minor changes to conform with C++11

v1.9.25
- Updated language files from Transifex

v1.9.24
- added getBackendHostname function

v1.9.23
- Fixed mime-type for MPEG-TS

v1.9.22
- Updated language files from Transifex

v1.9.21
- change library name to Kodi

v1.9.20
- fixed deadlock when activating the addon on some darwin (osx, ios) runtimes

v1.9.19
- Updated language files from Transifex

v1.9.18
- Updated language files from Transifex

v1.9.16
- Updated to API v1.9.2

v1.9.15
- Added: Series recording support (requires skin specific dialog)
- Fixed: [TSReader] Direct playback of recordings that are stored on a network share

v1.9.14
- Updated language files from Transifex

v1.9.13
- Added: Live TV/Recordings: Report "permission denied" errors on SMB access failures
- Changed: [Settings] enable fast channel switching by default
- Changed: Reduce the signal status calls to once every 10s.
- Fixed: Channel thumbnails: replace also the invalid file name characters <>*?\| in the channel name by a _
- Fixed: [SMB] Allow an empty username and password field
- Fixed: [SMB] Don't replace \\ by smb:// when not at the start of the path
- Fixed: Stop timeshifting at the backend side on buffer open failure.
- Fixed: Recordings: Fix playback for in-progress recordings. Play them always via the PVR addon to account for the growing file length
- Fixed: Recording playback over rtsp in ffmpeg mode

v1.9.12
- Updated language files from Transifex

v1.9.11
- Updated language files from Transifex

v1.9.10
- add timeshift buffer functions

v1.8.9
- TSReader: Fixed: channel switching behavior when switching across tsbuffer files
- TSReader: Fixed: Windows share access in multiseat mode (return smb:// URI's instead of \\UNC paths to XBMC also for Windows)